--- a/diff/index.html
+++ b/diff/index.html
@@ -1,10 +1,14 @@
 <HTML>
-
-<BODY>
-<FORM NAME="myform" ACTION="" METHOD="GET">Enter something in the box: <BR>
-<INPUT TYPE="text" NAME="inputbox" VALUE=""><P>
-<INPUT TYPE="button" NAME="button" Value="Click" onClick="testResults(this.form)">
-</FORM>
-</BODY>
-
+  
+  <head>
+      <script type="text/javascript" src="calculate.js"></script>
+  </head>
+  
+  <BODY>
+    <FORM NAME="myform" ACTION="" METHOD="GET">Enter something in the box: <BR>
+      <INPUT TYPE="text" NAME="inputbox" VALUE=""><P>
+      <INPUT TYPE="button" NAME="button" Value="Click" onClick="testResults(this.form)">
+    </FORM>
+  </BODY>
+  
 </HTML>
