--- a/diff/index.html
+++ b/diff/index.html
@@ -7,7 +7,7 @@
   <BODY>
     <FORM NAME="myform" ACTION="" METHOD="GET">Enter something in the box: <BR>
       <INPUT TYPE="text" NAME="inputbox" VALUE=""><P>
-      <INPUT TYPE="button" NAME="button" Value="Click" onClick="testResults(this.form)">
+      <INPUT TYPE="button" NAME="button" Value="Click" onClick="parseForm(this.form)">
     </FORM>
   </BODY>
   
