--- a/diff/index.html
+++ b/diff/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <BODY>
-    <FORM NAME="myform" ACTION="" METHOD="GET">Enter something in the box: <BR>
+    <FORM NAME="myform" ACTION="" METHOD="GET">Calculate: <BR>
       <INPUT TYPE="text" NAME="inputbox" VALUE=""><P>
       <INPUT TYPE="button" NAME="button" Value="Click" onClick="parseForm(this.form)">
     </FORM>
